--- a/src/scss/content.scss
+++ b/src/scss/content.scss
@@ -45,7 +45,7 @@
       margin-bottom: 14px;
     }
   }
-  &__col2 {
+  &__img {
     margin: 0 auto;
     height: 176px;
     @media screen and (min-width: $screen-md) {
