--- a/src/scss/popup-burger.scss
+++ b/src/scss/popup-burger.scss
@@ -3,6 +3,7 @@
   @media screen and (min-width: $screen-xl) {
     display: block !important;
     width: 320px;
+    height: 100%;
   }
 
   &__header{
@@ -22,11 +23,11 @@
       padding: 19px 24px 0px 24px;
     }
     @media screen and (min-width: $screen-xl) {
-
+      height: 100vh;
       width: 320px;
       box-shadow: none;
-      position: fixed;
-      height: 100vh;
+
+
 
   }
   }
@@ -44,8 +45,8 @@
     display: flex;
     flex-direction: column;
   }
-  &__footer-row1 {
-    margin-bottom: 40px;
+  &__footer-row  + &__footer-row  {
+    margin-top: 40px;
   }
 
   &__footer-email,
